<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">RuntimePermissionsWear</string>

    <string name="hello_phone_activity_main">Happy equals approved, sad equals denied.\n\nTo see results or request permissions, click on the buttons above.</string>
    <string name="button_wear_label_activity_main">Wear Sensors</string>
    <string name="button_phone_label_activity_main">Phone Information</string>
    <string name="requested_remote_permission">Requested permission on wear device(s).</string>
    <string name="requested_info_from_wear">Requested info from wear device(s). New approval may be required.</string>
    <string name="user_approved_remote_permission">User approved permission on remote device, requesting data again.</string>
    <string name="user_denied_remote_permission">User denied permission on remote device.</string>
    <string name="wear_not_available">Wear devices not available to send message.</string>
    <string name="sending_message_failed">Sending message failed.</string>
    <string name="phone_number_not_available">Phone number not available</string>

    <string name="title_activity_phone_permission_request">PhonePermissionRequestActivity</string>
    <string name="main_message_activity_phone_permission_request">See your phone number by letting us read your phone\'s cellular information.</string>
    <string name="details_message_activity_phone_permission_request">Your phone and watch experience need access to your phone\'s cellular information to show your phone number.</string>
    <string name="no_thanks_activity_phone_permission_request">No Thanks</string>
    <string name="continue_activity_phone_permission_request">Continue</string>

    <string name="title_activity_wear_permission_request">WearPermissionRequestActivity</string>
    <string name="main_message_activity_wear_permission_request">See your total sensor count by letting us read your wear\'s sensors.</string>
    <string name="details_message_activity_wear_permission_request">Your phone and watch experience need access to your wear\'s sensors to show sensor count.</string>
    <string name="no_thanks_activity_wear_permission_request">No Thanks</string>
    <string name="continue_activity_wear_permission_request">Open on Watch</string>

</resources>
